# Youtube-Downloader

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  LEGAL.md  LICENSE  README.md  compose.yaml  mise.toml
.claude/: settings.json
.claude/agents/: executor-sonnet.md  manager.md
.claude/rules/: code-quality.md  planner-executor.md  testing.md  tooling.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker-publish.yaml
backend/: pyproject.toml
backend/app/: limiter.py  main.py
backend/app/routers/: download.py  info.py  shared.py
backend/app/schemas/: video.py
backend/app/services/: youtube.py
backend/tests/: conftest.py  test_main.py
backend/tests/test_routers/: test_download.py  test_info.py  test_playlist.py
backend/tests/test_services/: test_youtube.py  test_youtube_pipe.py
docker/: Dockerfile  entrypoint.sh  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.test.ts  api.ts  main.ts  utils.test.ts  utils.ts
frontend/src/components/: download-btn.ts  format-picker.test.ts  format-picker.ts  playlist-view.test.ts  playlist-view.ts  url-input.test.ts  url-input.ts  video-info.ts
