[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader-backend"
version = "0.1.0"
description = "Privacy-first YouTube downloader backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.120",
    "uvicorn[standard]>=0.30.0,<0.40",
    "yt-dlp==2026.3.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
]
