[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader-backend"
version = "0.1.0"
description = "Privacy-first YouTube downloader backend"
requires-python = ">=3.12"
dependencies = [
    # 0.121.0 is the earliest release that pulls starlette>=0.49.1, which
    # is the fix line for CVE-2025-62727. Cap below 0.124 so dependabot
    # surfaces minor bumps as PRs rather than letting CI float.
    "fastapi>=0.121.0,<0.124",
    "uvicorn[standard]>=0.30.0,<0.47",
    "yt-dlp==2026.3.17",
    "slowapi>=0.1.9,<0.2",
]

[project.optional-dependencies]
dev = [
    # 9.0.3 fixes CVE-2025-71176 (insecure /tmp/pytest-of-{user} handling
    # on UNIX). Cap below 10.0 so a future major bump surfaces as a PR.
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.24.0,<2.0",
    "httpx>=0.27.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
]
